use dist folder

--- a/www/index.html
+++ b/www/index.html
@@ -13,5 +13,5 @@
   </style>
 </head>
 <body>
-  <script type="module" src="/.esbuild/main.js"></script>
+  <script type="module" src="/dist/main.js"></script>
 </body>
